# GPU_Programming_Explainer

./: .gitignore  CMakeLists.txt  CUDA_VSCODE_COLAB_SETUP.md  add22Darray.cu  add22DarrayEnhanced  add22DarrayEnhanced.cu  add2Darray.cu  add_arrays  add_arrays.cpp  add_arrays.cu  add_arrays2.cu  add_arrays2_cuda  add_arrays_cuda  addarray3.cu  addarray4.cu  colab_run.sh  cuda_image.py  db.sqlite  dynamic_shared_mem.cu  handCrafted2DarrayAdd.cu  hello  hello.cu  logfire_test.py  main.py  modal_cuda_Blackwell_image.py  modal_cuda_dev.py  modal_cuda_image.py  modal_cuda_image_minimal.py  modal_machine_setup.py  modal_setup.py  modal_setup.script.py  pyproject.toml  random_2d_array.cpp  setup_nvim.sh  shareddynamicmemory.cu  sharedmemory.cu  sharedstaticmemory2.cu  sing_vec_add  static_shared_mem.cu  sync_to_lambda.sh  (+2 more)
ARCHIVE/: modal_machine_marimo_setup.py
GPU By Hand/: Gpu_Blank.xlsx  Gpu_Solution_11.xlsx
__marimo__/session/: logfire_test.py.json  modal_setup.py.json
errorChecking/: checkCudaError.cu  cudaCheckInvalidDevice.cu  kernelError.cu
include/: cuda_error_check.h
modal_test/: modal_test.py
mojoWithPixi/: pixi.toml
programming_cuda_main/: README.md
programming_cuda_main/.specstory/: .project.json
programming_cuda_main/.specstory/history/: 2026-01-10_20-10-18Z.md
programming_cuda_main/workshop/01-discover-devices/: Makefile  Readme.md  prog.c
programming_cuda_main/workshop/02-vec-add-short/: Readme.md  prog.cu
programming_cuda_main/workshop/03-vec-add-arb/: Readme.md  prog.cu
programming_cuda_main/workshop/04-dot-product-naive/: Readme.md  (+2 more)
(+9 files in other folders)
